--- a/References/My_Library_ATE.bib
+++ b/References/My_Library_ATE.bib
@@ -1528,6 +1528,25 @@ Video Abstract},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/3FQJ77Q2/Vernot et al. - 2016 - Excavating Neandertal and Denisovan DNA from the g.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/Q5UDGRS6/677220.html:text/html}
 }
 
+
+@article{hsieh_model_based_2016,
+	title = {Model-based analyses of whole-genome data reveal a complex evolutionary history involving archaic introgression in Central African Pygmies},
+	volume = {26},
+	issn = {1549-5469},
+	doi = {10.1101/gr.196634.115},
+	abstract = {Comparisons of whole-genome sequences from ancient and contemporary samples have pointed to several instances of archaic admixture through interbreeding between the ancestors of modern non-Africans and now extinct hominids such as Neanderthals and Denisovans. One implication of these findings is that some adaptive features in contemporary humans may have entered the population via gene flow with archaic forms in Eurasia. Within Africa, fossil evidence suggests that anatomically modern humans ({AMH}) and various archaic forms coexisted for much of the last 200,000 yr; however, the absence of ancient {DNA} in Africa has limited our ability to make a direct comparison between archaic and modern human genomes. Here, we use statistical inference based on high coverage whole-genome data (greater than 60×) from contemporary African Pygmy hunter-gatherers as an alternative means to study the evolutionary history of the genus Homo. Using whole-genome simulations that consider demographic histories that include both isolation and gene flow with neighboring farming populations, our inference method rejects the hypothesis that the ancestors of {AMH} were genetically isolated in Africa, thus providing the first whole genome-level evidence of African archaic admixture. Our inferences also suggest a complex human evolutionary history in Africa, which involves at least a single admixture event from an unknown archaic population into the ancestors of {AMH}, likely within the last 30,000 yr.},
+	pages = {291--300},
+	number = {3},
+	journaltitle = {Genome Research},
+	shortjournal = {Genome Res.},
+	author = {Hsieh, {PingHsun} and Woerner, August E. and Wall, Jeffrey D. and Lachance, Joseph and Tishkoff, Sarah A. and Gutenkunst, Ryan N. and Hammer, Michael F.},
+	date = {2016-03},
+	pmid = {26888264},
+	pmcid = {PMC4772012},
+	keywords = {African Continental Ancestry Group, Animals, Evolution, Molecular, Gene Flow, Gene Frequency, Genetic Loci, Genetics, Population, Genome, Genome, Human, Genomics, Haplotypes, Humans, Linkage Disequilibrium, Pan paniscus, Polymorphism, Single Nucleotide},
+	file = {Full Text:/home/leonardo_iasi/Zotero/storage/892X6IA5/Hsieh et al. - 2016 - Model-based analyses of whole-genome data reveal a.pdf:application/pdf}
+}
+
 @article{vernot_resurrecting_2014,
 	title = {Resurrecting {Surviving} {Neandertal} {Lineages} from {Modern} {Human} {Genomes}},
 	volume = {343},
